--- a/.github/workflows/run_regression_models.yml
+++ b/.github/workflows/run_regression_models.yml
@@ -1,3 +1,5 @@
+# .github/workflows/run_regression_models.yml
+
 name: Run Regression Models (CFB)
 
 on:
@@ -13,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PYTHONUNBUFFERED: "1"   # print logs immediately
+      SEASON_MIN: "2019"
+      SEASON_MAX: "2025"
 
     steps:
       - name: Checkout
@@ -101,4 +105,3 @@ jobs:
           else
             git commit -m "Add regression metrics, coeffs, and model artifacts [skip ci]"
             git push
-          fi
