--- a/.github/workflows/report-unmatched-scores.yml
+++ b/.github/workflows/report-unmatched-scores.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas python-dateutil
+          pip install pandas python-dateutil requests
 
       - name: Ensure folders exist
         run: |
@@ -34,11 +34,13 @@ jobs:
         run: |
           set -e
           if [ -f scripts/fetch_game_scores_cfbd.py ]; then
+            echo "Using scripts/fetch_game_scores_cfbd.py"
             python scripts/fetch_game_scores_cfbd.py --out data/game_scores.csv
           elif [ -f scripts/fetch_game_scores.py ]; then
+            echo "Using scripts/fetch_game_scores.py"
             python scripts/fetch_game_scores.py --out data/game_scores.csv
           else
-            echo "ERROR: Missing fetch script (scripts/fetch_game_scores_cfbd.py or scripts/fetch_game_scores.py)"
+            echo "ERROR: Missing fetch script"
             exit 2
           fi
           if [ ! -s data/game_scores.csv ]; then
@@ -50,7 +52,7 @@ jobs:
         run: |
           set -e
           if [ ! -f scripts/clean_scores_unique_by_id.py ]; then
-            echo "ERROR: Missing cleaner script (scripts/clean_scores_unique_by_id.py)"
+            echo "ERROR: Missing cleaner script"
             exit 4
           fi
           python scripts/clean_scores_unique_by_id.py --in data/game_scores.csv --out data/game_scores_clean.csv
@@ -60,6 +62,7 @@ jobs:
           fi
           cp -f data/game_scores_clean.csv data/scores/game_scores_clean.csv
           cp -f data/game_scores_clean.csv data/scores/scores.csv
+          echo "SCORES UPDATED ✅"
 
       - name: Commit and push artifacts
         run: |
@@ -79,5 +82,5 @@ jobs:
             git status --porcelain
           else
             git commit -m "Update scores (raw+clean) [skip ci]"
-            git push
+            git push origin "${GITHUB_REF_NAME:-main}"
           fi
