--- a/.github/workflows/build_modeling_dataset.yml
+++ b/.github/workflows/build_modeling_dataset.yml
@@ -10,13 +10,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install pandas
@@ -40,10 +42,11 @@ jobs:
           done
           echo "ACCEPTANCE: PASS"
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: modeling-dataset-and-logs
-          path: |
-            data/modeling_dataset.csv
-            logs_build_modeling_dataset.txt
+      - name: Commit and push dataset
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+          git add data/modeling_dataset.csv logs_build_modeling_dataset.txt || true
+          git commit -m "Update modeling_dataset with situational features [skip ci]" || echo "No changes to commit"
+          git push
