--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ Thumbs.db
 !player_stats_season_raw.csv
 !player_injuries_raw.csv
 !logs_player_stats_run.txt
+!summaries/sync_stadiums_summary.txt
