--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
+*.pyc
+*.pyo
 *$py.class
 
 # C extensions
@@ -83,3 +84,4 @@ Thumbs.db
 !player_injuries_raw.csv
 !logs_player_stats_run.txt
 !summaries/sync_stadiums_summary.txt
+!summaries/fill_stadiums_summary.txt
