--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ Thumbs.db
 !logs_player_stats_run.txt
 !summaries/sync_stadiums_summary.txt
 !summaries/fill_stadiums_summary.txt
+!summaries/backfill_timezones_summary.txt
