--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,7 @@ Thumbs.db
 !summaries/sync_stadiums_summary.txt
 !summaries/fill_stadiums_summary.txt
 !summaries/backfill_timezones_summary.txt
+
+# Keep derived games output
+!data/raw/games.csv
+!summaries/derive_games_summary.txt
